--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@ code {
       on-merge: backport to [BRANCHNAME]</code>, and MrMeeseeks will
   automatically create the Backport once the PR is merged.<p/>
 
+  <h2> Help </h2> You can help by contributing code to Mr Meeseeks, or helping
+  by manually fixing conflicts, when MrMeeseeks cannot automatically apply the
+  backport. You can find all issues that still need manual backporting by
+  looking at the "Still Needs Manual Backport" tag on GitHub <a
+      href='https://github.com/search?q=label%3A%22Still+Needs+Manual+Backport%22+is%3Aopen&state=closed&type=Issues'>Click
+      Here</a> to See these.
+
   <h2> More ? </h3>
 
   <p>MrMeeseeks is not limited to backport; it can add labels, remove labels, merge, open and close issues ...etc, and support per-repository and per user configuration. Thus if you like to give limited permission to a subset of your users, you can. See <a href='https://github.com/MeeseeksBox/MeeseeksDev#what-can-a-meeseeksbox-do-'> The README </a> for more informations</p>
