--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ code {
   <p>Now any commiter on said repository can say <code>@meeseeksdev backport to
       [BRANCHNAME]</code> on a merged PR, and Mr Meeseeks will attempt to
   backport it, and issue a Pull Request if it was able to do so. You can also
-  set a <b>Label</b> or a <b>Milestone</b> which description wontains <code>
+  set a <b>Label</b> or a <b>Milestone</b> which description contains <code>
       on-merge: backport to [BRANCHNAME]</code>, and MrMeeseeks will
   automatically create the Backport once the PR is merged.<p/>
 
